<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_formation"
            android:icon="@drawable/ic_formation"
            android:title="@string/formation"/>
        <item
            android:id="@+id/nav_university"
            android:icon="@drawable/ic_place"
            android:title="@string/university"/>
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event"
            android:title="@string/events"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help"/>

    </group>
</menu>