<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_all"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/connection"
        android:textSize="@dimen/dim_title"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/login"
        />

    <EditText
        android:id="@+id/txtPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_marginStart="@dimen/dim_left"
        android:layout_marginEnd="@dimen/dim_right"
        android:backgroundTint="@color/blue_dark"
        />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_marginStart="@dimen/dim_left"
        android:layout_marginEnd="@dimen/dim_right"
        android:backgroundTint="@color/blue_primary"
        />

</LinearLayout>